Fixed a white space issue where scrollable right

--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -1,6 +1,10 @@
 body,html {
-  width: 100%;
-  height: 100%;
+    width: 100%;
+    height: 100%;
+}
+
+body {
+	overflow-x: hidden;
 }
 
 .whole-plate {
